# txtarchive

./: .gitignore  README-Implementation.md  README.md  __main__ copy.py  __main__.py  archive-by-filename.sh  create-archive-llm-instructions.md  flake.nix  header.py  onhold.py  packunpack.py  pyproject.toml  result  setup.py  test_package.py  txtarchive-LLM-archive.txt  txtarchive-archive.txt  txtarchive-llm-friendly.txt  txtarchive.txt  usage.py  utilities.py
.archive/: scd_phenotyping.txt
.github/workflows/: compliance-scan.yaml
LLM/: 015-Prepare-Phenotyping-Data.ipynb
asksage/: gettoken.sh  gettolken.sh
chatmodes/: agent.md
prompts/: paper-figures.md  template.md
python/: README.md
scripts/: archive-lhn.sh  archive-scd-ai-on-cloud.sh  archive-scd-phenotyping.sh  archive-txtarchive.sh  archive-updatebionic.sh  dev_setup.sh  extract-notebooks-diagnosis-prep.sh  guide.md  runarchive-on-cloud.sh  runarchive-on-configuration.sh  runarchive-on-local.sh  txtarchive-on-local.sh  unpack.sh
scripts/maintainance/: apply-delimiter-escape.sh  patch.sh  test-ingest.sh
scripts/one-off/: word-to-markdown.sh
split_txtarchive/: txtarchive-LLM-archive.txt  txtarchive-llm-friendly_part1.txt  txtarchive-llm-friendly_part2.txt
test_restored/: test.ipynb
tests/: test-html-to-markdown.py  test-ingestion.py  test-ingestion.sh  test-word-functionality.sh  test-word-to-markdown.py  test_packunpack.py  test_quarto_cells.py  test_report_extractor.py  test_word_functionality.py
txtarchive/: Explicit-files-feature-implementation.md  __init__.py  __main__.py  archive.ipynb  ask_sage.py  generatge-txtarcchive-llm-freindly-archive-prompt.md  header.py  html_converter.py  packunpack.py  packunpack.py.backup  pyproject.toml  quarto_cells.py  report_extractor.py  split_files.py  utilities.py  word_converter.py
