[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "txtarchive"
version = "0.2.0"
authors = [
  { name="Harlan A Nelson", email="harlananelson@gmail.com" },
]
description = "A utility for archiving and unpacking text files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "mammoth",
  "python-docx",
  "pypandoc",
  "beautifulsoup4",
  "pyyaml",
]

[project.scripts]
txtarchive = "txtarchive.__main__:main"

[tool.setuptools]
packages = ["txtarchive"] # Or use find:
# packages = { find = {} }
include-package-data = true

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
]
fast-html = [
  "lxml",
]