[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "txtarchive"
version = "0.1.0"
description = "A utility for archiving code files into text format for file transfer and LLM analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Harlan Nelson", email = "hnelson3@iuhealth.org"}
]
maintainers = [
    {name = "Harlan Nelson", email = "hnelson3@iuhealth.org"}
]
keywords = [
    "archive", 
    "text", 
    "jupyter", 
    "notebook", 
    "llm", 
    "file-transfer", 
    "backup",
    "cloud-transfer"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.8"
dependencies = [
    "nbformat>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900"
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0"
]

[project.urls]
Homepage = "https://github.com/harlananelson/txtarchive"
Repository = "https://github.com/harlananelson/txtarchive.git"
Issues = "https://github.com/harlananelson/txtarchive/issues"
Documentation = "https://github.com/harlananelson/txtarchive#readme"

[project.scripts]
txtarchive = "txtarchive.__main__:main"

[tool.setuptools]
packages = ["txtarchive"]
include-package-data = true

[tool.setuptools.package-data]
txtarchive = ["*.py", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests"
]
python_files = [
    "*_test.py",
    "test_*.py"
]
python_functions = [
    "test_*"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["txtarchive"]
omit = [
    "*/tests/*",
    "*/test_*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]